--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,7 +4,7 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
-  { title: "Features", url: "#features" },
+  { title: "About Me", url: "#aboutme" },
   { title: "Compatibility", url: "#compatibility" },
   { title: "Showcase", url: "#showcase" },
 ];
