--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from "@astrojs/image/components";
 import { Icon } from "astro-icon";
-import astronautImage from "~/assets/astronaut.png";
+import spartanThumbUp from "~/assets/spartan_thumbUp.png";
 import HeroImage from "~/components/hero-image.astro";
 import Starfield from "~/components/starfield.astro";
 import GitHubCorner from "./github-corner.astro";
@@ -11,7 +11,6 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
 <section class="relative h-full bg-black">
-  <Starfield />
   <GitHubCorner />
   <div id="splash-bg-fallback" class="absolute inset-0 hidden opacity-40">
     <HeroImage />
@@ -20,13 +19,14 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     <h2
       class="flex flex-col gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end"
     >
-      <Icon name="logomark" class="h-24 text-white md:h-32" />
       <div
-        class="gradient-text text-center font-extrabold tracking-tighter text-8xl"
+        class="gradient-text text-left font-extrabold tracking-tighter text-9xl h-full"
       >
-        Build fast
-        <br /> websites,
-        <br /> faster.
+        Welcome
+        <br /> I'm Ricardo,
+        <br /> aka Saga
+        <br />
+        <br />
       </div>
     </h2>
     <div
@@ -35,7 +35,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     >
       <Picture
         class="object-cover w-full h-full"
-        src={astronautImage}
+        src={spartanThumbUp}
         widths={widths}
         sizes={sizes}
         loading="eager"
