--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import "@fontsource/inter/variable.css";
 import Compatibility from "~/components/compatibility.astro";
-import Features from "~/components/features.astro";
+import AboutMe from "~/components/aboutMe.astro";
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
@@ -17,7 +17,7 @@ const description =
 
 <!DOCTYPE html>
 <html lang="en" class="h-full motion-safe:scroll-smooth" data-theme="dark">
-  <head>
+  <head>  
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
@@ -64,8 +64,8 @@ const description =
     <Header />
     <Splash />
     <div class="space-y-24 px-8 py-32">
-      <Intro />
-      <Features />
+      <hr/>
+      <AboutMe />
       <Compatibility />
       <Showcase />
     </div>
