Clean up and V1 finished

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,8 +5,8 @@ import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
   { title: "About Me", url: "#aboutme" },
-  { title: "Compatibility", url: "#compatibility" },
-  { title: "Showcase", url: "#showcase" },
+  { title: "Technologies", url: "#technologies" },
+  { title: "Projects", url: "#projects" },
 ];
 ---
 
