--- a/src/components/hero-image.astro
+++ b/src/components/hero-image.astro
@@ -1,14 +1,14 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import moonImage from "~/assets/moon.jpg";
+import chocoDona from "~/assets/dona.jpg";
 
 const widths = [450, 800, 1200];
 const sizes = "100vw";
 ---
 
 <Picture
-  class="object-cover w-full h-full"
-  src={moonImage}
+  class="object-cover w-full h-full align top"
+  src={chocoDona}
   widths={widths}
   sizes={sizes}
   alt="The ridged surface of the moon"
