--- a/src/components/showcase-card.astro
+++ b/src/components/showcase-card.astro
@@ -1,9 +1,9 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import type { ShowcaseSite } from "~/types";
+import type { Project } from "~/types";
 
 export interface Props {
-  site: ShowcaseSite;
+  site: Project;
 }
 
 const { site } = Astro.props;
