--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,24 +5,24 @@ import type { FooterLink } from "~/types";
 
 const links: Array<FooterLink> = [
   {
-    url: "https://astro.build/",
-    description: "Astro's official website",
-    icon: "mdi:home",
-  },
-  {
-    url: "https://github.com/mhyfritz/astro-landing-page",
+    url: "https://github.com/is4g4i",
     description: "View source on GitHub",
     icon: "fa-brands:github-alt",
   },
   {
-    url: "https://astro.build/chat",
-    description: "Astro on Discord",
-    icon: "fa-brands:discord",
+    url: "https://www.instagram.com/ricardogsaga/",
+    description: "My personal Instagram",
+    icon: "fa-brands:instagram",
   },
   {
-    url: "https://twitter.com/astrodotbuild",
-    description: "Astro on Twitter",
+    url: "https://twitter.com/ricardogsaga",
+    description: "My Twitter",
     icon: "fa-brands:twitter",
+  },
+  {
+    url: "https://www.twitch.tv/saga_5464",
+    description: "My twitch channel",
+    icon: "fa-brands:twitch",
   },
 ];
 ---
