--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,9 +1,7 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import { Icon } from "astro-icon";
 import spartanThumbUp from "~/assets/spartan_thumbUp.png";
 import HeroImage from "~/components/hero-image.astro";
-import Starfield from "~/components/starfield.astro";
 import GitHubCorner from "./github-corner.astro";
 
 const widths = [450, 800];
@@ -12,9 +10,6 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
 
 <section class="relative h-full bg-black">
   <GitHubCorner />
-  <div id="splash-bg-fallback" class="absolute inset-0 hidden opacity-40">
-    <HeroImage />
-  </div>
   <div class="relative grid h-full place-items-center sm:grid-cols-2">
     <h2
       class="flex flex-col gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end"
@@ -30,7 +25,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
       </div>
     </h2>
     <div
-      id="astronaut"
+      id="floatingImage"
       class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
     >
       <Picture
@@ -39,7 +34,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
         widths={widths}
         sizes={sizes}
         loading="eager"
-        alt="A floating astronaut in a space suit"
+        alt="A floating mascot"
       />
     </div>
   </div>
@@ -64,12 +59,12 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     }
   }
 
-  #astronaut {
+  #floatingImage {
     animation: float linear 2.5s infinite alternate;
   }
 
   @media (prefers-reduced-motion: reduce) {
-    #astronaut {
+    #floatingImage {
       @apply animate-none;
     }
 
