--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,17 @@
 ---
 import "@fontsource/inter/variable.css";
-import Compatibility from "~/components/compatibility.astro";
-import AboutMe from "~/components/aboutMe.astro";
+import Technologies from "~/components/technologies.astro";
+import Aboutme from "~/components/aboutme.astro";
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
-import Intro from "~/components/intro.astro";
-import Showcase from "~/components/showcase.astro";
+import Projects from "~/components/projects.astro";
 import Splash from "~/components/splash.astro";
 import "~/styles/index.css";
 
 const { generator, site } = Astro;
 const image = new URL("social.jpg", site);
 const description =
-  "Build fast websites, faster. Astro is a new kind of site builder for the modern web. Lightning-fast performance meets powerful developer experience.";
+  "Welcome to my personal Portfolio, Im Ricardo aka Saga im a web developer";
 ---
 
 <!DOCTYPE html>
@@ -27,7 +26,7 @@ const description =
     <meta name="description" content={description} />
 
     <!-- social media -->
-    <meta property="og:title" content="Astro" />
+    <meta property="og:title" content="Saga Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content={description} />
     <meta property="og:image" content={image} />
@@ -65,9 +64,9 @@ const description =
     <Splash />
     <div class="space-y-24 px-8 py-32">
       <hr/>
-      <AboutMe />
-      <Compatibility />
-      <Showcase />
+      <Aboutme />
+      <Technologies />
+      <Projects />
     </div>
     <Footer />
   </body>
