Fix imports for deploy

--- a/src/components/hero-image.astro
+++ b/src/components/hero-image.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import chocoDona from "~/assets/dona.jpg";
+import chocoDona from "../assets/dona.jpg";
 
 const widths = [450, 800, 1200];
 const sizes = "100vw";
