--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -1,7 +1,7 @@
 ---
-import ContentSection from "~/components/content-section.astro";
-import ShowcaseCard from "~/components/showcase-card.astro";
-import { getShowcase } from "~/data/showcase";
+import ContentSection from "./content-section.astro";
+import ShowcaseCard from "./showcase-card.astro";
+import { getShowcase } from "../data/showcase";
 
 const sites = await getShowcase();
 ---
