--- a/src/components/showcase-card.astro
+++ b/src/components/showcase-card.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import type { Project } from "~/types";
+import type { Project } from "../types";
 
 export interface Props {
   site: Project;
