--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,7 +1,6 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import spartanThumbUp from "~/assets/spartan_thumbUp.png";
-import HeroImage from "~/components/hero-image.astro";
+import spartanThumbUp from "../assets/spartan_thumbUp.png";
 import GitHubCorner from "./github-corner.astro";
 
 const widths = [450, 800];
