--- a/src/components/technologies-list.astro
+++ b/src/components/technologies-list.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon";
-import type { TechnologyItem } from "~/types";
+import type { TechnologyItem } from "../types";
 
 export interface Props {
   items: Array<TechnologyItem>;
