--- a/src/components/technologies.astro
+++ b/src/components/technologies.astro
@@ -1,6 +1,6 @@
 ---
-import TechnologiesList from "~/components/technologies-list.astro";
-import ContentSection from "~/components/content-section.astro";
+import TechnologiesList from "./technologies-list.astro";
+import ContentSection from "./content-section.astro";
 import type { TechnologyItem } from "~/types";
 
 const frameworks: Array<TechnologyItem> = [
