--- a/src/components/aboutMe.astro
+++ b/src/components/aboutMe.astro
@@ -1,6 +1,6 @@
 ---
-import ContentSection from "~/components/content-section.astro";
-import type { FeatureItem } from "~/types";
+import ContentSection from "./content-section.astro";
+import type { FeatureItem } from "../types";
 
 const features: Array<FeatureItem> = [
   {
