--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon";
-import ThemeSwitcher from "~/components/theme-switcher.astro";
-import type { NavItem } from "~/types";
+import ThemeSwitcher from "./theme-switcher.astro";
+import type { NavItem } from "../types";
 
 const navItems: Array<NavItem> = [
   { title: "About Me", url: "#aboutme" },
@@ -17,7 +17,6 @@ const navItems: Array<NavItem> = [
   <a class="flex items-center gap-3 hover:!text-default" href="#">
     <h1 class="sr-only">Astro</h1>
     <Icon name="logomark" class="h-10" />
-    <Icon name="wordmark" class="hidden h-4 sm:block" />
   </a>
   <div>
     <div class="flex items-center gap-6">
