--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import "@fontsource/inter/variable.css";
-import Technologies from "~/components/technologies.astro";
-import Aboutme from "~/components/aboutme.astro";
-import Footer from "~/components/footer.astro";
-import Header from "~/components/header.astro";
-import Projects from "~/components/projects.astro";
-import Splash from "~/components/splash.astro";
-import "~/styles/index.css";
+import Technologies from "../components/technologies.astro";
+import Aboutme from "../components/aboutme.astro";
+import Footer from "../components/footer.astro";
+import Header from "../components/header.astro";
+import Projects from "../components/projects.astro";
+import Splash from "../components/splash.astro";
+import "../styles/index.css";
 
 const { generator, site } = Astro;
 const image = new URL("social.jpg", site);
@@ -63,7 +63,6 @@ const description =
     <Header />
     <Splash />
     <div class="space-y-24 px-8 py-32">
-      <hr/>
       <Aboutme />
       <Technologies />
       <Projects />
