Refactor aboutme, and prettier format

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import "@fontsource/inter/variable.css";
 import Technologies from "../components/technologies.astro";
-import Aboutme from "../components/aboutme.astro";
+import About from "../components/about.astro";
 import Footer from "../components/footer.astro";
 import Header from "../components/header.astro";
 import Projects from "../components/projects.astro";
@@ -64,7 +64,7 @@ const description =
     <Header />
     <Splash />
     <div class="space-y-24 px-8 py-32">
-      <Aboutme />
+      <About />
       <Technologies />
       <Projects />
     </div>
