Update anchors blank, added designs, new images

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -25,7 +25,7 @@ const features: Array<FeatureItem> = [
   <Fragment slot="lead">
     Greetings, Im a <span class="text-primary">Web developer</span> and also a
     <span class="text-primary">UI/UX Designer</span>. <br/><br/>
-    With 4+ years of experience in multiple <span class="text-primary">Javascript</span> frameworks and tech stacks 
+    With 4+ years of experience developing in multiple <span class="text-primary">Javascript</span> frameworks and tech stacks 
     with a strong focus on <span class="text-primary">A11y</span>.<br/><br/>
     I can help you to build an awesome <span class="text-primary">web app</span>!
   </Fragment>
