--- a/src/components/github-corner.astro
+++ b/src/components/github-corner.astro
@@ -1,4 +1,5 @@
 <a
+  target="_blank"
   href="https://github.com/is4g4i"
   aria-label="Check my github profile"
   class="absolute top-0 right-0 z-10 text-black hover:text-black focus:ring-0 focus:ring-offset-0"
