--- a/src/components/technologies.astro
+++ b/src/components/technologies.astro
@@ -42,6 +42,11 @@ const libraries: Array<TechnologyItem> = [
     icon: "libraries/storybook",
     url: "https://storybook.js.org/",
   },
+  {
+    title: "MobX",
+    icon: "libraries/mobx",
+    url: "https://mobx.js.org/README.html",
+  },
 ];
 
 const styling: Array<TechnologyItem> = [
@@ -64,6 +69,11 @@ const styling: Array<TechnologyItem> = [
     title: "Tailwind",
     icon: "styling/tailwind",
     url: "https://tailwindui.com/",
+  },
+  {
+    title: "Bootstrap",
+    icon: "styling/bootstrap",
+    url: "https://getbootstrap.com",
   },
 ];
 
