--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,13 +1,14 @@
 ---
 import { Picture } from "@astrojs/image/components";
 import spartanThumbUp from "../assets/spartan_thumbUp.png";
+import doggo from "../assets/doggo1white.png";
 import GitHubCorner from "./github-corner.astro";
 
 const widths = [450, 800];
 const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
-<section class="relative h-full bg-black">
+<section class="relative h-full bg-gradient-to-b from-black via-gray-900 to-black">
   <GitHubCorner />
   <div class="relative grid h-full place-items-center sm:grid-cols-2">
     <h2
@@ -18,7 +19,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
       >
         Welcome
         <br /> I'm Ricardo,
-        <br /> aka Saga
+        <br /> a.k.a. Saga
         <br />
         <br />
       </div>
@@ -28,13 +29,14 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
       class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
     >
       <Picture
-        class="object-cover w-full h-full"
-        src={spartanThumbUp}
+        class="object-contain w-full h-60 sm:h-96"
+        src={doggo}
         widths={widths}
         sizes={sizes}
         loading="eager"
         alt="A floating mascot"
       />
+      <div></div>
     </div>
   </div>
 </section>
